fixed input layout issue

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h1 {
 }
 
 #tempo-input {
-  width: 100px;
+  width: 3.5ch;
   font-size: 4rem;
   font-weight: 300;
   text-align: center;
